UY-1304 registration/enquiry QA1 fixes